<resources>
    <string name="app_name">ImageU</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_pic">ShowPicActivity</string>
    <string name="pic_description">从服务器获取的图片</string>
    <string name="title_activity_shido">ShidoActivity</string>
    <string name="shido_world">石洞world</string>
    <string name="juststarting">与你一起努力</string>
    <string name="city_name">深圳</string>
    <string name="quarter_name">罗湖</string>
    <string name="myworld">我的世界</string>
    <string name="myfavorite">我的收藏</string>
    <string name="about">关于</string>
    <string name="deconnect">退出</string>

    <string-array name="drawer_item">
        <item>我的世界</item>
        <item>我的收藏</item>
        <item>历史</item>
        <item>设置</item>
    </string-array>

</resources>
